@@ -25,9 +25,10 @@ rb-toggle-search=Search recipe book
 rb-results-nav-confirm=Confirm search selection
 
 [rb-message]
-translation-not-finished=Please wait, dictionary translation has not yet finished.
-translation-finished=Dictionary translation finished, you may now use the Recipe Book!
+command-help= [parameter]\nrefresh-player-data - close and recreate all GUIs, retranslate dictionaries, and update settings.
 retranslate-all-command-help=Retranslate all of your personal dictionaries.
+translation-finished=Dictionary translation finished, you may now use the Recipe Book!
+translation-not-finished=Please wait, dictionary translation has not yet finished.
 
 [rb-gui]
 back-to=Back to __1__
